[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "ReiDoBrega" }, { name = "duck" }]
license = { text = "CC BY-NC-ND 4.0" }
requires-python = "<3.14,>=3.10"
dependencies = [
  "click<9.0.0,>=8.1.7",
  "cloup<4.0.0,>=3.0.5",
  "wasmtime<37.0.0,>=36.0.0",
]
name = "pymonalisa"
version = "0.1.3"
description = "pymonalisa - A Python library to decrypt IQIYI DRM License Ticket"
readme = "README.md"
keywords = ["python", "drm", "monalisa", "iqcom", "iqiyi", "wasm"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
pymonalisa = "pymonalisa.main:main"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 90
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
  "isort<7.0.0,>=6.0.0",
  "pep8-naming<1.0.0,>=0.15.1",
  "pre-commit<5.0.0,>=4.0.0",
  "pyupgrade<4.0.0,>=3.0.0",
  "vulture<3.0,>=2.3",
  "ruff<1.0.0,>=0.11.0",
  "pyinstaller<7.0,>=6.0",
  "unify<1.0,>=0.5",
  "yesqa<2.0.0,>=1.4.0",
]
